crates/ts-doc/tests/snapshots/package__types__complex_type_template.snap
---
source: tests/package.rs
expression: "package_one(\"export type Foo = `${number}.${number} ${string}`;\")"
---
{
  "exports": {
    "Foo": {
      "type": "link",
      "id": "/test/src/index.tsx:Foo"
    }
  },
  "links": {
    "/test/src/index.tsx:Foo": {
      "type": "alias",
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "value": {
        "type": "template",
        "elements": [
          {
            "type": "string",
            "value": ""
          },
          {
            "type": "number"
          },
          {
            "type": "string",
            "value": "."
          },
          {
            "type": "number"
          },
          {
            "type": "string",
            "value": " "
          },
          {
            "type": "string"
          },
          {
            "type": "string",
            "value": ""
          }
        ]
      },
      "typeParameters": []
    }
  }
}
