crates/ts-doc/tests/snapshots/package__types__type_alias.snap
---
source: tests/package.rs
expression: "package_one(\"export type Foo = number;\")"
---
{
  "exports": {
    "Foo": {
      "type": "link",
      "id": "/test/src/index.tsx:Foo"
    }
  },
  "links": {
    "/test/src/index.tsx:Foo": {
      "type": "alias",
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "value": {
        "type": "number"
      },
      "typeParameters": []
    }
  }
}
