crates/ts-doc/tests/snapshots/package__types__type_union.snap
---
source: tests/package.rs
expression: "package_one(\"export type Foo = number | string;\")"
---
{
  "exports": {
    "Foo": {
      "type": "link",
      "id": "/test/src/index.tsx:Foo"
    }
  },
  "links": {
    "/test/src/index.tsx:Foo": {
      "type": "alias",
      "id": "/test/src/index.tsx:Foo",
      "name": "Foo",
      "value": {
        "type": "union",
        "elements": [
          {
            "type": "number"
          },
          {
            "type": "string"
          }
        ]
      },
      "typeParameters": []
    }
  }
}
